Fixed audio autoplay issue and updated JS logic

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <audio id="background-music" autoplay loop>
-        <source src="img/Pretend_Lovers.mp3" type="audio/mpeg">
+        <source src="/img/PL.mp3" type="audio/mpeg">
     </audio>
     
     <section id="div11" class="parent2">
