Added Word Content

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
             <div class="heart" id="heartLetter"></div>
         </div>
         <section class="child" id="div1">
-            <h2>For Joylyn</h2>
-            <h3>NEED TO THINK OF WORDS TO SAY LMAOOOO
+            <h2>For Joylyn <3!</h2>
+            <h3>I know I already asked you out for valentines day but I wanted to make it special for you and ask you out officially. The first time I saw you, you blew me away with your beauty and your smile. I knew I had to get to know you better. I am so glad I did because you are the most amazing person I have met recently. You are so kind, caring, and loving. I love spending time with you and I can't wait to spend more time with you. 
+        
             </h3>
             <h3 class="goodbye">love, Jainam</h3>
             <h3 class="goodbye">BUT WAITTTTTTTTTTTT......</h3>
@@ -41,7 +42,7 @@
         </section>
         <section class="child2" id="div3" style="display: none;">
             <img src="img/kiss-you.gif" alt="" class="img2">
-            <h3 style="letter-spacing: 3px;">YAYYYYYYY, FINALLY LAAAA!!!</h3>
+            <h3 style="letter-spacing: 3px;">YAYYYYYYY, FINALLY!!!<br> Had me worried there for a second</br></h3>
             <h3 style="letter-spacing: 3px;">WANNA JOIN ME FOR DINNER ? <3</h3>
             <div class="container4button">
                 <button id="btn-yes" onclick="toggleDiv3()"><3</button>
